Fixed span allignment issues. Fixed text overlap issue by adding max character count.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@
 .tasks ul li {
     font-size: 17px;
     cursor: pointer;
-    padding: 18px 0px 5px 50px;
+    padding: 20px 0px 5px 50px;
     list-style: none;
     position: relative;
 }
@@ -122,8 +122,8 @@
 .tasks ul li span {
     visibility: hidden;
     position: absolute;
+    top: 10px;
     right: 0;
-    top: 14px;
     font-size: 11px;
     text-align: center;
     line-height: 40px;
